--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "lint": "eslint src/**/*.js src/**/*.jsx src/*.jsx --fix",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
