--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run lint"
+      "pre-push": "npm run lint",
+      "pre-commit": "npm run lint"
     }
   },
   "scripts": {
