--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js src/**/*.jsx src/*.jsx",
-    "lint:fix": "eslint src/**/*.js src/**/*.jsx src/*.jsx --fix",
-    "eject": "react-scripts eject"
+    "lint:fix": "eslint src/**/*.js src/**/*.jsx src/*.jsx --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
