--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run lint",
-      "pre-commit": "npm run lint"
+      "pre-push": "npm run lint"
     }
   },
   "scripts": {
