--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "7.2.1",
     "axios": "0.19.2",
     "classnames": "2.2.6",
+    "express": "4.17.1",
     "normalize-css": "2.3.1",
     "prop-types": "15.7.2",
     "react": "16.13.0",
@@ -25,6 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:cd": "npm run build && node -e \"require('fs').copyFileSync('./src/server.js', './build/server.js');\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js src/**/*.jsx src/*.jsx",
