--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:cd": "npm run build && node -e \"require('fs').copyFileSync('./src/server.js', './build/server.js');\"",
+    "build:cd": "npm run build && node -e \"require('fs').copyFileSync('./src/web.config', './build/web.config');\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js src/**/*.jsx src/*.jsx",
