--- a/src/web.config
+++ b/src/web.config
@@ -3,17 +3,13 @@
   <system.webServer>
     <rewrite>
       <rules>
-        <rule name="Static Assets" stopProcessing="true">
-          <match url="([\S]+[.](html|htm|svg|js|css|png|gif|jpg|jpeg|json))" />
-          <action type="Rewrite" url="/{R:1}"/>
-        </rule>
         <rule name="ReactRouter Routes" stopProcessing="true">
           <match url=".*" />
           <conditions logicalGrouping="MatchAll">
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
           </conditions>
-          <action type="Rewrite" url="/index.html" />
+          <action type="Rewrite" url="/" />
         </rule>
       </rules>
     </rewrite>
