--- a/src/web.config
+++ b/src/web.config
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
   <system.webServer>
+    <staticContent>
+      <remove fileExtension=".json"/>
+      <mimeMap fileExtension=".json" mimeType="application/json"/>
+    </staticContent>
     <rewrite>
       <rules>
         <rule name="ReactRouter Routes" stopProcessing="true">
@@ -9,7 +13,7 @@
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
           </conditions>
-          <action type="Rewrite" url="/" />
+          <action type="Rewrite" url="/index.html" />
         </rule>
       </rules>
     </rewrite>
